--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -127,3 +127,99 @@
     filter: invert(1);
   }
 }
+
+.bannerContainer {
+}
+
+.bannerLeftSection {
+  align-items: flex-start !important;
+}
+
+.bannerRightSection {
+}
+
+.bannerTitle {
+  width: 931px;
+  height: 141px;
+
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 42px;
+  line-height: 63px;
+
+  color: #000000;
+}
+
+.specialWord {
+  color: #eb498f;
+}
+
+.bannerSubtitle {
+  margin-top: 0 !important;
+  margin-bottom: 1rem !important;
+  width: 352px;
+  height: 30px;
+
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  /* identical to box height */
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: #848484;
+}
+
+.bannerCard {
+  width: 574px;
+  height: 364px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.bannerSendButton {
+  width: 187px !important;
+  height: 77px !important;
+  border-radius: 20px !important;
+
+  background: #eb498f !important;
+
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 33px;
+  /* identical to box height */
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: #ffffff;
+}
+
+.bannerExploreButton {
+  width: 187px !important;
+  height: 77px !important;
+  border-radius: 20px !important;
+  background-color: transparent !important;
+
+  border: 1px solid rgba(0, 0, 0, 0.8);
+
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 33px;
+  /* identical to box height */
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: black;
+}
