--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -3,6 +3,7 @@
 }
 
 .main {
+  position: relative;
   min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
@@ -10,6 +11,20 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+}
+
+.centerEllipse {
+  left: 50%;
+  transform: translateX(-50%);
+  top: -1300px;
+  width: 1939px;
+  height: 1939px;
+  background-image: url(/ellipse.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: absolute;
+  pointer-events: none;
 }
 
 .footer {
@@ -206,9 +221,9 @@
   width: 187px !important;
   height: 77px !important;
   border-radius: 20px !important;
-  background-color: transparent !important;
+  background-color: white !important;
 
-  border: 1px solid rgba(0, 0, 0, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.4);
 
   font-family: "Poppins";
   font-style: normal;
@@ -221,7 +236,7 @@
   align-items: center;
   text-align: center;
 
-  color: black;
+  color: rgb(33, 33, 33);
 }
 
 .cardCategoryHeaderContainer {
