--- a/frontend/styles/Navbar.module.css
+++ b/frontend/styles/Navbar.module.css
@@ -15,3 +15,87 @@
 .logo {
   width: 120px;
 }
+
+.hamburgerButton {
+  margin-left: 10px;
+  margin-top: 7px;
+  opacity: 0.5;
+  transition: opacity 0.3s;
+  color: black !important;
+}
+
+.hamburgerButton:hover {
+  opacity: 1;
+}
+
+.drawerBody {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  color: black;
+  font-family: "Poppins";
+}
+
+.drawerButton {
+  background-color: transparent !important;
+  font-size: 1.2rem !important;
+  color: black;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.drawerButton {
+  position: relative;
+  color: black;
+  text-decoration: none;
+  padding: 0 0 0 0 !important;
+  margin-left: 1rem;
+}
+
+.drawerButton:hover {
+  color: black;
+}
+
+.drawerButton::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+.drawerButton:hover::before {
+  transform: scaleX(1);
+}
+
+.drawerFooter {
+  display: flex;
+  flex-direction: column;
+  color: black;
+  justify-content: flex-start;
+  align-items: flex-start !important;
+}
+
+.drawerFooterLabel {
+  user-select: none;
+  padding: 0.5rem 0;
+  opacity: 0.5;
+}
+
+.drawerFooterButton {
+  background-color: transparent !important;
+  color: black;
+  padding-left: 0 !important;
+  justify-content: flex-start !important;
+  opacity: 0.5;
+}
+
+.drawerFooterButton:hover {
+  opacity: 0.7;
+}
