--- a/frontend/styles/Navbar.module.css
+++ b/frontend/styles/Navbar.module.css
@@ -16,8 +16,18 @@
   width: 120px;
 }
 
+.bellButton {
+  margin-top: 7px;
+  opacity: 0.5;
+  transition: opacity 0.3s;
+  color: black !important;
+}
+
+.bellButton:hover {
+  opacity: 1;
+}
+
 .hamburgerButton {
-  margin-left: 10px;
   margin-top: 7px;
   opacity: 0.5;
   transition: opacity 0.3s;
