--- a/frontend/styles/Navbar.module.css
+++ b/frontend/styles/Navbar.module.css
@@ -43,41 +43,25 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  color: black;
   font-family: "Poppins";
 }
 
 .drawerButton {
   background-color: transparent !important;
   font-size: 1.2rem !important;
-  color: black;
   margin-top: 10px;
+  margin-left: 1rem;
   margin-bottom: 10px;
-}
-
-.drawerButton {
   position: relative;
-  color: black;
   text-decoration: none;
   padding: 0 0 0 0 !important;
-  margin-left: 1rem;
+  color: rgb(0, 0, 0);
+  opacity: 0.5;
+  transition: transform 0.3s ease;
 }
 
 .drawerButton:hover {
-  color: black;
-}
-
-.drawerButton::before {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: white;
-  transform: scaleX(0);
-  transition: transform 0.3s ease;
+  opacity: 1;
 }
 
 .drawerButton:hover::before {
@@ -87,7 +71,6 @@
 .drawerFooter {
   display: flex;
   flex-direction: column;
-  color: black;
   justify-content: flex-start;
   align-items: flex-start !important;
 }
@@ -95,17 +78,20 @@
 .drawerFooterLabel {
   user-select: none;
   padding: 0.5rem 0;
-  opacity: 0.5;
+  opacity: 0.8;
+  color: black;
 }
 
 .drawerFooterButton {
   background-color: transparent !important;
-  color: black;
   padding-left: 0 !important;
   justify-content: flex-start !important;
-  opacity: 0.5;
+  color: black;
+  opacity: 0.8;
+  text-decoration: none !important;
 }
 
 .drawerFooterButton:hover {
-  opacity: 0.7;
+  text-decoration: none !important;
+  opacity: 1;
 }
