--- a/frontend/styles/Create.module.css
+++ b/frontend/styles/Create.module.css
@@ -430,3 +430,14 @@
   border-radius: 7px;
   color: #353535;
 }
+
+.saveButton {
+  width: 169px;
+  height: 60px;
+  border-radius: 20px;
+  background-color: white !important;
+
+  border: 1px solid rgba(0, 0, 0, 0.2);
+
+  color: rgb(33, 33, 33);
+}
