--- a/frontend/styles/Create.module.css
+++ b/frontend/styles/Create.module.css
@@ -314,10 +314,42 @@
   color: #848484;
 }
 
+.yaySubtitle {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  /* identical to box height */
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: #848484;
+}
+
+.yaySubtitle:hover {
+  text-decoration: underline;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  /* identical to box height */
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: #848484;
+}
+
 .previewCard {
   width: 670px;
   height: 425px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 20px;
 }
 
 .previewCardContainer {
